--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -5,5 +5,6 @@
     "outDir": "ts-built",                                   /* Specify an output folder for all emitted files. */
     // "rootDir": "scripts",
     "strict": true,                                      /* Enable all strict type-checking options. */
+    "allowJs": true
   }
 }
