--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "compilerOptions": {
-    "target": "es6",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+  "compilerOptions": {                               /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "target": "es6",
     "module": "commonjs",                                /* Specify what module code is generated. */
     "outDir": "ts-built",                                   /* Specify an output folder for all emitted files. */
     // "rootDir": "scripts",
